# PothosSDR

./: BuildCommon.cmake  BuildCubicSDR.cmake  BuildGNURadio.cmake  BuildGrPothos.cmake  BuildGrQt4Deps.cmake  BuildHwDrivers.cmake  BuildLimeSuite.cmake  BuildPothos.cmake  BuildSDRApps.cmake  BuildSoapySDR.cmake  BuildToolkits.cmake  CMakeLists.txt  GNURadioHelper.py  GitPatchHelper.py  InstallPrebuilt.cmake  PrepareGRC.py  README.build  README.md  SetupNSIS.cmake  SetupPython.cmake
Launchers/: PothosGui.bat  README.md
Scripts/: GNURadioHelper.py  GitPatchHelper.py  gnuradio-companion.py  python2_pyqt4_configure.ps1  python2_pyqwt5_configure.ps1
WindowsBuild/: BuildGNURadio.bat  BuildHwDrivers.bat  BuildPothos.bat  BuildPothosSDR.bat  BuildSDR.bat  GenPothosGUILnk.vbs  InstallPrebuilt.bat  Prebuilt.bat
WindowsBuild/Launchers/: PothosGui.bat
patches/: MANIFEST.md  README.md  airspy_build_msvc.diff  airspyhf_missing_getopt.diff  bladerf.diff  bladerf_cal_dc_fix.diff  bladerf_cyapi_win10.diff  bladerf_disable_test_config.diff  bladerf_fix_empty_array.diff  bladerf_msvc14_fix.diff  cppunit_dll_project_files.diff  faac_dll_project_files.diff  faad2_dll_project_files.diff  gnuradio.diff  gnuradio_boost_atomic.diff  gnuradio_catv_bin_hex.diff  gnuradio_cmakelists_elseif.diff  gnuradio_config_h.diff  gnuradio_config_msvc_math.diff  gnuradio_config_msvc_rand48.diff  gnuradio_dtv_use_alloca.diff  gnuradio_dtv_use_gr_aligned.diff  gnuradio_dtv_vc11_log2.diff  gnuradio_fec_dllr_factor.diff  gnuradio_fec_ldpc_config_h.diff  gnuradio_fix_codec2_fdmdv_round.diff  gnuradio_fix_codec2_public_defs.diff  gnuradio_fix_filter_truncation.diff  gnuradio_fix_infinity_redefined.diff  gnuradio_fix_msvc14.diff  gnuradio_fix_pfb_clock_sync_fff.diff  gnuradio_fix_use_swig.diff  gnuradio_gr_fft_flock.diff  gnuradio_grc_windows_paths.diff  gnuradio_ifdef_unistd_h.diff  gnuradio_not_for_random.diff  gnuradio_paths_return_fix.diff  gnuradio_portaudio_add_io_h.diff  gnuradio_posix_time.diff  gnuradio_python_path.diff  (+49 more)
pygtk/: build.txt  setup.py
python/: soapysdr_python38_add_dll_directory.py
